--- a/appys.json
+++ b/appys.json
@@ -44,6 +44,10 @@
           "url": "http://www.ayinb.com/api.php/app/"
         },
         {
+          "title": "安逸影视",
+          "url": "http://aytv.wchulian.com.cn:6633/api.php/app/"
+        },
+        {
           "title": "播放呀",
           "url": "https://www.bofangya.com/xgapp.php/v1/"
         },
@@ -57,15 +61,15 @@
         },
         {
           "title": "嘀哩嘀哩",
-          "url": "https://diliktv.xyz/xgapp.php/v1/"
-        },
-        {
-          "title": "嘀哩嘀哩",
           "url": "http://dilidili.la/api.php/app/"
         },
         {
           "title": "北墨影院",
           "url": "http://beimotv.com/api.php/app/"
+        },
+        {
+          "title": "苍蓝资源",
+          "url": "https://vip.ruifenglb.com:4433/api.php/app/"
         },
         {
           "title": "段友影视",
@@ -94,6 +98,10 @@
         {
           "title": "海绵影视",
           "url": "http://app1.yuzhouys.com/api.php/app/"
+        },
+        {
+          "title": "环球影视",
+          "url": "https://hqystv.com/api.php/app/"
         },
         {
           "title": "海棠视频",
@@ -144,6 +152,10 @@
           "url": "http://app.mengdandan.com/xgapp.php/v1/"
         },
         {
+          "title": "苗点影视",
+          "url": "https://www.msdv.cn/api.php/app/"
+        },
+        {
           "title": "麻花视频",
           "url": "https://www.mahuashipin.com/xgapp.php/v1/"
         },
@@ -180,6 +192,10 @@
           "url": "https://www.tkys.tv/api.php/app/"
         },
         {
+          "title": "躺平影视",
+          "url": "http://www.lltpys.com/api.php/app/"
+        },
+        {
           "title": "我爱电影",
           "url": "http://xg.5imv.net/api.php/app/"
         },
@@ -194,6 +210,10 @@
         {
           "title": "小强TV",
           "url": "http://xqapp.hailanfj.com/xgapp.php/v1/"
+        },
+        {
+          "title": "小七影视",
+          "url": "http://ys.kd60.cn/api.php/app/"
         },
         {
           "title": "雪人影视",
@@ -257,6 +277,10 @@
           "url": "https://www.hzlff.cn/api.php/v1.vod"
         },
         {
+          "title": "爱追剧",
+          "url": "http://81.71.18.95:520/lvdou_api.php/v1.vod"
+        },
+        {
           "title": "爱看美剧",
           "url": "https://www.uumjw.com/api.php/v1.vod"
         },
@@ -314,7 +338,7 @@
         },
         {
           "title": "大熊影视",
-          "url": "https://dxys3355.com/mogai_api.php/v1.vod"
+          "url": "https://dxys2233.com/mogai_api.php/v1.vod"
         },
         {
           "title": "段友影视",
@@ -323,6 +347,10 @@
         {
           "title": "段友影视",
           "url": "https://shangjihuoke.com/api.php/v1.vod"
+        },
+        {
+          "title": "豆渣影视",
+          "url": "http://douzhayss.cc/api.php/v1.vod"
         },
         {
           "title": "二狗电影",
@@ -375,6 +403,10 @@
         {
           "title": "筋斗云",
           "url": "https://tv.jindcloud.com/api.php/v1.vod"
+        },
+        {
+          "title": "极光影院",
+          "url": "http://app.winxz.cc/api.php/v1.vod"
         },
         {
           "title": "极简影视",
@@ -433,10 +465,6 @@
           "url": "https://www.lansi.tv/api.php/v1.vod"
         },
         {
-          "title": "木白影视",
-          "url": "http://vapp.23at.cn/api.php/v1.vod"
-        },
-        {
           "title": "免费看",
           "url": "https://freekan.vip/mogai_api.php/v1.vod"
         },
@@ -474,7 +502,7 @@
         },
         {
           "title": "奈非迷",
-          "url": "https://app.netflixmi.com/ruifenglb_api.php/v1.vod"
+          "url": "https://app.netflixmi.com/api.php/v1.vod"
         },
         {
           "title": "南府影视",
@@ -509,8 +537,8 @@
           "url": "https://app.qiqu.me/mogai_api.php/v1.vod"
         },
         {
-          "title": "骑士影院",
-          "url": "https://app.qishi.xyz/api.php/v1.vod"
+          "title": "瑞丰",
+          "url": "https://ts.yjhan.com:4433/ruifenglb_api.php/v1.vod"
         },
         {
           "title": "人人动漫",
@@ -545,10 +573,6 @@
           "url": "https://tv.51aizn.com/api.php/v1.vod"
         },
         {
-          "title": "天神影视",
-          "url": "https://lntis.top/api.php/v1.vod"
-        },
-        {
           "title": "天天影视",
           "url": "http://app.at008.cn/api.php/v1.vod"
         },
@@ -575,10 +599,6 @@
         {
           "title": "吾爱影视",
           "url": "http://52ysw.xyz/mogai_api.php/v1.vod"
-        },
-        {
-          "title": "蜗牛看鸭",
-          "url": "http://movie.96keji.cn/api.php/v1.vod"
         },
         {
           "title": "蜗牛动漫",
@@ -654,20 +674,12 @@
           "url": "http://luobu.yss6080.com/mogai_api.php/v1.vod"
         },
         {
-          "title": "元芳影视",
-          "url": "http://yfys1122.com/mogai_api.php/v1.vod"
-        },
-        {
           "title": "雨果影视",
           "url": "http://ygapp.xcys63.com/api.php/v1.vod"
         },
         {
           "title": "樱花动漫",
           "url": "https://www.dmwu.cc/api.php/v1.vod"
-        },
-        {
-          "title": "颖家影院",
-          "url": "http://zly.xjqxz.top/api.php/v1.vod"
         },
         {
           "title": "月亮影视",
@@ -712,10 +724,6 @@
         {
           "title": "追剧吧",
           "url": "http://zhuiju8.vip/api.php/v1.vod"
-        },
-        {
-          "title": "宅男影院",
-          "url": "https://www.znyy666.top/api.php/v1.vod"
         },
         {
           "title": "宅男影院",
