--- a/appys.json
+++ b/appys.json
@@ -8,8 +8,12 @@
           "url": "https://www.007ts.cc/api.php/app/"
         },
         {
+          "title": "3080影视",
+          "url": "http://sv.3080l.me/api.php/app/"
+        },
+        {
           "title": "555电影",
-          "url": "http://w7tv.com/api.php/app/"
+          "url": "http://w7tv.com/xgapp.php/v1/"
         },
         {
           "title": "5060影院",
@@ -28,12 +32,20 @@
           "url": "https://www.mkys.me/api.php/app/"
         },
         {
+          "title": "lovetv",
+          "url": "https://app.lovetv.online/api.php/app/"
+        },
+        {
           "title": "vip影院",
-          "url": "http://360yy.cn/xgapp.php/v1/"
+          "url": "http://360yy.cn/api.php/app/"
         },
         {
           "title": "爱迪影视",
           "url": "https://aidi.fun/xgapp.php/v1/"
+        },
+        {
+          "title": "嗷呜动漫",
+          "url": "http://app.aowufuns.com:1031/api.php/app/"
         },
         {
           "title": "哎呀影视",
@@ -113,7 +125,7 @@
         },
         {
           "title": "海棠视频",
-          "url": "https://www.haitangsp.net/xgapp.php/v1/"
+          "url": "https://www.haitangsp.net/api.php/app/"
         },
         {
           "title": "京广航",
@@ -122,6 +134,10 @@
         {
           "title": "久九影视",
           "url": "https://api.58qxk.cn/xgapp.php/v1/"
+        },
+        {
+          "title": "极客",
+          "url": "https://www.i8k.cc/xgapp.php/v1/"
         },
         {
           "title": "看365",
@@ -164,16 +180,28 @@
           "url": "https://www.msdv.cn/api.php/app/"
         },
         {
+          "title": "蜜果TV",
+          "url": "https://www.miguotv.net/api.php/app/"
+        },
+        {
           "title": "麻花视频",
           "url": "https://www.mahuashipin.com/api.php/app/"
         },
         {
-          "title": "迷你库",
-          "url": "http://www.miniku.cc/api.php/app/"
+          "title": "莫扎兔",
+          "url": "http://www.mozhatu.xyz/api.php/app/"
+        },
+        {
+          "title": "奈飞中文",
+          "url": "https://www.naifei.org/api.php/app/"
         },
         {
           "title": "皮皮影视",
           "url": "http://pp.ig4.cn/api.php/app/"
+        },
+        {
+          "title": "氢视频",
+          "url": "http://h1080p.com/api.php/app/"
         },
         {
           "title": "思古影视",
@@ -182,10 +210,6 @@
         {
           "title": "神马影院",
           "url": "https://www.6080kan.cc/xgapp.php/v1/"
-        },
-        {
-          "title": "双十电影",
-          "url": "http://www.shoujikandianying.com/api.php/app/"
         },
         {
           "title": "天空影视",
@@ -228,6 +252,10 @@
           "url": "http://qqtvapp.com/xgapp.php/v1/"
         },
         {
+          "title": "雪人影视",
+          "url": "https://xg.qd234.cn/api.php/app/"
+        },
+        {
           "title": "小易影视",
           "url": "https://xy.irop.cn/api.php/app/"
         },
@@ -237,11 +265,15 @@
         },
         {
           "title": "影视工场",
-          "url": "https://www.ik4.cc/api.php/app/"
+          "url": "https://www.ysgc.cc/xgapp.php/v1/"
         },
         {
           "title": "追剧达人",
           "url": "http://vipmv.tv/xgapp.php/v1/"
+        },
+        {
+          "title": "(无名)",
+          "url": "http://ccxg.xazhutu.com/xgapp.php/v1/"
         }
       ]
     },
@@ -269,8 +301,16 @@
           "url": "https://xays6677.com/mogai_api.php/v1.vod"
         },
         {
+          "title": "雪梨视频",
+          "url": "https://zsb2233.com/mogai_api.php/v1.vod"
+        },
+        {
           "title": "杨桃影视",
           "url": "https://ytys3456.com/mogai_api.php/v1.vod"
+        },
+        {
+          "title": "1080p",
+          "url": "https://1080p.one/mogai_api.php/v1.vod"
         },
         {
           "title": "4K影院",
@@ -315,6 +355,10 @@
         {
           "title": "段友影视",
           "url": "https://shangjihuoke.com/api.php/v1.vod"
+        },
+        {
+          "title": "饭后电影",
+          "url": "http://summ.vip/api.php/v1.vod"
         },
         {
           "title": "飞捷影视",
@@ -366,7 +410,7 @@
         },
         {
           "title": "南府影视",
-          "url": "http://nfapi.nfuxs.com/mogai_api.php/v1.vod"
+          "url": "http://nfapi.nfuxs.com/nfuxsapp.php/v1.vod"
         },
         {
           "title": "柠柚影视",
@@ -403,6 +447,14 @@
         {
           "title": "月色影视",
           "url": "http://69ty.cc/mogai_api.php/v1.vod"
+        },
+        {
+          "title": "优视影视",
+          "url": "http://cc.ysys.asia/api.php/v1.vod"
+        },
+        {
+          "title": "遗忘影视",
+          "url": "http://www.bywdtk.vip/mogai_api.php/v1.vod"
         },
         {
           "title": "影阅阁",
@@ -457,6 +509,10 @@
           "url": "http://taikong.huangguay.com/mogai_api.php/v1.vod"
         },
         {
+          "title": "大头影视",
+          "url": "http://dy.idsao.com/mogai_api.php/v1.vod"
+        },
+        {
           "title": "段友影视",
           "url": "http://js.66app.me/api.php/v1.vod"
         },
@@ -466,11 +522,7 @@
         },
         {
           "title": "二九影视",
-          "url": "https://www.38dyy.com/api.php/v1.vod"
-        },
-        {
-          "title": "饭后电影",
-          "url": "http://summ.vip/api.php/v1.vod"
+          "url": "https://app.19kp.com/api.php/v1.vod"
         },
         {
           "title": "辉哥影视",
@@ -641,16 +693,16 @@
           "url": "http://lb.26ys.cn/api.php/v1.vod"
         },
         {
-          "title": "优视影视",
-          "url": "http://cc.ysys.asia/api.php/v1.vod"
-        },
-        {
           "title": "渔渔影视",
           "url": "http://luobo.yugenye.site/api.php/v1.vod"
         },
         {
           "title": "柚子视频",
           "url": "http://yz.26ys.cn/api.php/v1.vod"
+        },
+        {
+          "title": "追剧猫",
+          "url": "http://tv.kmtvb.com/api.php/v1.vod"
         },
         {
           "title": "宅男影院",
@@ -738,8 +790,16 @@
           "url": "http://www.freekan.vip/api.php/iptv/vod/"
         },
         {
+          "title": "蜜果TV",
+          "url": "http://vv.miguotv.net/m/api.php/Chengcheng/vod/"
+        },
+        {
           "title": "米来影视",
           "url": "http://42.51.37.161:2346/api.php/iptv/vod/"
+        },
+        {
+          "title": "米奇TV",
+          "url": "http://www.s6ep3.top/api.php/iptv/vod/"
         },
         {
           "title": "思奇TV",
